--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'postgresql:postgresql:9.0-801.jdbc4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
